--- a/client/app.json
+++ b/client/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "johnny",
+    "name": "noTalkFoodClient",
     "slug": "snack-4874e607-8eac-4222-b285-6461798be8dc",
     "version": "1.0.0",
     "orientation": "portrait",
