--- a/restaurantes/app.json
+++ b/restaurantes/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "jonnhy-registery",
+    "name": "noTalkFoodRestaurantes",
     "slug": "snack-7d8e4dc3-5066-4a66-ae65-9f45c9fd3f09",
     "version": "1.0.0",
     "orientation": "portrait",
