--- a/restaurantes/package.json
+++ b/restaurantes/package.json
@@ -8,24 +8,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/netinfo": "6.0.0",
+    "@react-navigation/native": "*",
+    "@react-navigation/stack": "*",
     "expo": "~42.0.1",
+    "expo-constants": "~11.0.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12",
-    "expo-constants": "~11.0.2",
-    "react-native-svg": "12.1.1",
-    "@expo/vector-icons": "^12.0.0",
-    "react-native-paper": "3.6.0",
-    "react-native-screens": "~3.4.0",
-    "@react-navigation/stack": "*",
-    "@react-navigation/native": "*",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-svg-transformer": "*",
+    "react-native-keyboard-aware-scroll-view": "*",
+    "react-native-paper": "3.6.0",
     "react-native-safe-area-context": "3.2.0",
-    "@react-native-community/netinfo": "6.0.0",
-    "react-native-keyboard-aware-scroll-view": "*"
+    "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
+    "react-native-svg-transformer": "*",
+    "react-native-web": "~0.13.12",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
