--- a/restaurantes/app.json
+++ b/restaurantes/app.json
@@ -1,32 +1,11 @@
 {
   "expo": {
-    "name": "noTalkFoodRestaurantes",
-    "slug": "snack-7d8e4dc3-5066-4a66-ae65-9f45c9fd3f09",
+    "name": "notalkfoodrestaurantes",
+    "slug": "notalkfoodrestaurantes",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
     "assetBundlePatterns": [
       "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
-  }
+    ]
+  },
+  "name": "notalkfoodrestaurantes"
 }
