--- a/restaurantes/package.json
+++ b/restaurantes/package.json
@@ -1,35 +1,37 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "web": "expo start --web -c",
+    "eject": "expo eject",
+    "link": "react-native link",
+    "androidnewport": "react-native run-android --port 1234"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-community/netinfo": "6.0.0",
-    "@react-navigation/native": "*",
-    "@react-navigation/stack": "*",
-    "expo": "~42.0.1",
-    "expo-constants": "~11.0.2",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "@babel/preset-env": "^7.1.6",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@reduxjs/toolkit": "^1.6.2",
+    "expo": "~43.0.2",
+    "expo-splash-screen": "~0.13.5",
+    "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.13",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-keyboard-aware-scroll-view": "*",
-    "react-native-paper": "3.6.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-svg": "12.1.1",
-    "react-native-svg-transformer": "*",
-    "react-native-web": "~0.13.12",
-    "yarn": "^1.22.17"
+    "react-native-paper": "^4.10.1",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "name": "notalkfoodrestaurantes"
 }
